--- a/car_rental/templates/car_rental/car_list.html
+++ b/car_rental/templates/car_rental/car_list.html
@@ -17,7 +17,7 @@
     
                 <button type="button" id="btn-self"
                     class="py-2 px-6 text-blue-600 border-b-2 border-blue-600 font-semibold text-lg">
-                    เช่ารถ
+                    เช่ารถขับเอง
                 </button>
 
                 <button type="button" id="btn-driver"
